teamapps-client/less/components/UiVideoPlayer.less
/*-
 * ========================LICENSE_START=================================
 * TeamApps
 * ---
 * Copyright (C) 2014 - 2020 TeamApps.org
 * ---
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * =========================LICENSE_END==================================
 */
.UiVideoPlayer {
  display: flex;
  align-items: center;
  overflow: hidden;

  .mejs__overlay-button {
    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, .5));
  }
  &.not-playable {
    .mejs__overlay-play,
    .mejs__controls {
      display: none !important;
    }
  }

  .mejs__overlay-error {
    img {
      display: none;
    }
    .mejs__cannotplay {
      padding: 20px;
      font-size: 110%;
      text-shadow: 0 0 3px black;
    }
  }

  video {
    width: 100%;
    height: 100%;
  }

  &.hide-controls {
    .mejs__container .mejs__controls {
      display: none !important;
    }
  }

  &.poster-cover .mejs__poster {
    background-size: cover;
  }
  &.poster-contain .mejs__poster {
    background-size: contain;
  }
  &.poster-original .mejs__poster {
    background-size: auto;
  }
}

